include/Win32/CUDA.Runtime.hpp

//-- forward type declarations -----------------------------------------------
struct TCudaChannelFormatDesc;
struct DECLSPEC_DRECORD TcudaArray
{
};
struct TcudaPitchedPtr;
struct TcudaExtent;
struct TcudaPos;
struct TcudaMemcpy3DParms;
struct TCudaDeviceProp;
struct TTextureReference;
//-- type declarations -------------------------------------------------------
typedef System::StaticArray<System::UnicodeString, 10> Cuda_Runtime__1;
enum DECLSPEC_DENUM TcudaError : unsigned char { cudaSuccess, cudaErrorMissingConfiguration, cudaErrorMemoryAllocation, cudaErrorInitializationError, cudaErrorLaunchFailure, cudaErrorPriorLaunchFailure, cudaErrorLaunchTimeout, cudaErrorLaunchOutOfResources, cudaErrorInvalidDeviceFunction, cudaErrorInvalidConfiguration, cudaErrorInvalidDevice, cudaErrorInvalidValue, cudaErrorInvalidPitchValue, cudaErrorInvalidSymbol, cudaErrorMapBufferObjectFailed, cudaErrorUnmapBufferObjectFailed, cudaErrorInvalidHostPointer, cudaErrorInvalidDevicePointer, cudaErrorInvalidTexture, cudaErrorInvalidTextureBinding, cudaErrorInvalidChannelDescriptor, cudaErrorInvalidMemcpyDirection, cudaErrorAddressOfConstant, cudaErrorTextureFetchFailed, cudaErrorTextureNotBound, 
	cudaErrorSynchronizationError, cudaErrorInvalidFilterSetting, cudaErrorInvalidNormSetting, cudaErrorMixedDeviceExecution, cudaErrorCudartUnloading, cudaErrorUnknown, cudaErrorNotYetImplemented, cudaErrorMemoryValueTooLarge, cudaErrorInvalidResourceHandle, cudaErrorNotReady, cudaErrorStartupFailure, cudaErrorApiFailureBase };
enum DECLSPEC_DENUM TCudaChannelFormatKind : unsigned char { cudaChannelFormatKindSigned, cudaChannelFormatKindUnsigned, cudaChannelFormatKindFloat };
enum DECLSPEC_DENUM TCudaGLMapFlags : unsigned char { cudaGLMapFlagsNone, cudaGLMapFlagsReadOnly, cudaGLMapFlagsWriteDiscard };
typedef TCudaChannelFormatDesc *PcudaChannelFormatDesc;
struct DECLSPEC_DRECORD TCudaChannelFormatDesc
{
public:
	int x;
	int y;
	int z;
	int w;
	TCudaChannelFormatKind f;
};
enum DECLSPEC_DENUM TcudaMemcpyKind : unsigned char { cudaMemcpyHostToHost, cudaMemcpyHostToDevice, cudaMemcpyDeviceToHost, cudaMemcpyDeviceToDevice };
struct DECLSPEC_DRECORD TcudaPitchedPtr
{
public:
	void *ptr;
	NativeUInt pitch;
	NativeUInt xsize;
	NativeUInt ysize;
};
struct DECLSPEC_DRECORD TcudaExtent
{
public:
	NativeUInt width;
	NativeUInt height;
	NativeUInt depth;
};
struct DECLSPEC_DRECORD TcudaPos
{
public:
	NativeUInt x;
	NativeUInt y;
	NativeUInt z;
};
struct DECLSPEC_DRECORD TcudaMemcpy3DParms
{
public:
	void *srcArray;
	TcudaPos srcPos;
	TcudaPitchedPtr srcPtr;
	void *dstArray;
	TcudaPos dstPos;
	TcudaPitchedPtr dstPtr;
	TcudaExtent extent;
	TcudaMemcpyKind kind;
};
typedef TCudaDeviceProp *PCudaDeviceProp;
struct DECLSPEC_DRECORD TCudaDeviceProp
{
public:
	System::StaticArray<char, 256> name;
	NativeUInt totalGlobalMem;
	NativeUInt sharedMemPerBlock;
	int regsPerBlock;
	int warpSize;
	NativeUInt memPitch;
	int maxThreadsPerBlock;
	System::StaticArray<int, 3> maxThreadsDim;
	System::StaticArray<int, 3> maxGridSize;
	int clockRate;
	NativeUInt totalConstMem;
	int major;
	int minor;
	NativeUInt textureAlignment;
	int deviceOverlap;
	int multiProcessorCount;
	int kernelExecTimeoutEnabled;
	int egrated;
	int canMapHostMemory;
	int computeMode;
	int maxTexture1D;
	System::StaticArray<int, 2> maxTexture2D;
	System::StaticArray<int, 3> maxTexture3D;
	System::StaticArray<int, 3> maxTexture2DArray;
	NativeUInt surfaceAlignment;
	int concurrentKernels;
	int ECCEnabled;
	int pciBusID;
	int pciDeviceID;
	int tccDriver;
	System::StaticArray<int, 21> __cudaReserved;
};
enum DECLSPEC_DENUM TcudaTextureAddressMode : unsigned char { cudaAddressModeWrap, cudaAddressModeClamp, cudaAddressModeMirror };
enum DECLSPEC_DENUM TcudaTextureFilterMode : unsigned char { cudaFilterModePoint, cudaFilterModeLinear };
enum DECLSPEC_DENUM TcudaTextureReadMode : unsigned char { cudaReadModeElementType, cudaReadModeNormalizedFloat };
typedef TTextureReference *PTextureReference;
struct DECLSPEC_DRECORD TTextureReference
{
public:
	int normalized;
	TcudaTextureFilterMode filterMode;
	System::StaticArray<TcudaTextureAddressMode, 3> addressMode;
	TCudaChannelFormatDesc channelDesc;
	System::StaticArray<int, 16> __cudaReserved;
};
typedef TcudaArray *PcudaArray;
typedef TcudaError cudaError_t;
typedef int cudaStream_t;
typedef int cudaEvent_t;
//-- var, const, procedure ---------------------------------------------------
extern DELPHI_PACKAGE Cuda_Runtime__1 CUDARTDLLNAMES;
extern DELPHI_PACKAGE float CUDART_INF_F;
extern DELPHI_PACKAGE float CUDART_NAN_F;
extern DELPHI_PACKAGE float CUDART_MIN_DENORM_F;
extern DELPHI_PACKAGE float CUDART_MAX_NORMAL_F;
extern DELPHI_PACKAGE float CUDART_NEG_ZERO_F;
#define CUDART_ZERO_F  (0.000000E+00)
#define CUDART_ONE_F  (1.000000E+00)
#define CUDART_TWO_TO_23_F  (8.388608E+06)
#define CUDART_TWO_TO_24_F  (1.677722E+07)
#define CUDART_TWO_TO_31_F  (2.147484E+09)
#define CUDART_TWO_TO_32_F  (4.294967E+09)
#define CUDART_TRIG_PLOSS_F  (4.803900E+04)
extern DELPHI_PACKAGE double CUDART_INF;
extern DELPHI_PACKAGE double CUDART_NAN;
extern DELPHI_PACKAGE double CUDART_NEG_ZERO;
extern DELPHI_PACKAGE double CUDART_MIN_DENORM;
#define CUDART_ZERO  (0.000000E+00)
#define CUDART_ONE  (1.000000E+00)
#define CUDART_TWO_TO_23  (8.388608E+06)
#define CUDART_TRIG_PLOSS  (2.147484E+09)
extern DELPHI_PACKAGE TcudaError __stdcall (*cudaHostAlloc)(void * &pHost, NativeUInt bytes, unsigned flags);
using namespace Cuda::Runtime;